<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/switch_thumb_normal_material_light"
    android:orientation="vertical"

    tools:context="com.example.offlinequizzes.ViewResult">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/finalScore"
                    android:textSize="20dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/firstAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="10dp"
                android:text="@string/firstAnswer"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/secondAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="15dp"
                android:text="@string/secondAnswer"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/thridAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="15dp"
                android:text="@string/thridAnswer"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/fourthAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="10dp"
                android:text="@string/fourthAnswer"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/fifthAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="10dp"
                android:text="@string/fifthAnswer"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/sixthAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="10dp"
                android:text="@string/sixthAnswer"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/sevenththAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="10dp"
                android:text="@string/sevenththAnswer"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/eighthAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="10dp"
                android:text="@string/eighthAnswer"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/ninthtAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/ninthtAnswer"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/LastAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="10dp"
                android:text="@string/LastAnswer"
                android:textSize="17dp" />

            <Button
                android:id="@+id/backToHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@color/switch_thumb_normal_material_light"
                style="@style/Base.Animation.AppCompat.Dialog"
                android:textColor="@color/material_deep_teal_500"
                android:padding="10dp"
                android:text="@string/backToHome"
                android:textSize="17dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
