<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/exam"
    tools:context="com.example.offlinequizzes.ViewExams">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/first_exam"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_above="@+id/second_exam"
                android:layout_alignParentTop="true"
                android:layout_margin="3dp"
                android:background="@color/switch_thumb_normal_material_light"
                android:text="@string/first_exam"
                android:textColor="@color/material_deep_teal_500"
                android:textSize="@dimen/abc_action_button_min_height_material" />

            <Button
                android:id="@+id/second_exam"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_above="@+id/thrid_exam"
                android:layout_margin="3dp"
                android:background="@color/switch_thumb_normal_material_light"
                android:text="@string/second_exam"
                android:textColor="@color/material_deep_teal_500"
                android:textSize="@dimen/abc_action_button_min_height_material" />

            <Button
                android:id="@+id/thrid_exam"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_margin="3dp"
                android:background="@color/switch_thumb_normal_material_light"
                android:text="@string/third_exam"
                android:textColor="@color/material_deep_teal_500"
                android:textSize="@dimen/abc_action_button_min_height_material" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
