<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.offlinequizzes.ViewExam">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="125dp"
                android:src="@drawable/time"></ImageView>
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="vertical">
                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/question_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:padding="10dp"
                    android:text="@string/currentQuestion"
                    android:textColor="@color/accent_material_light"
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout4"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/timer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_marginLeft="52dp"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:text="@string/timer"
                    android:textColor="@color/accent_material_light"
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/linearLayout"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.31"
                    android:text="@string/AreyouReady"
                    android:textAlignment="center"
                    android:textColor="@color/accent_material_light"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout2"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:text="@string/chooseTheCorrectAnswer"
                    android:textColor="@color/accent_material_light"
                    android:textSize="25dp" />

                <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:button="@null"
                    android:gravity="right"
                    android:layoutDirection="rtl"
                    android:textDirection="rtl">

                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="New RadioButton" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New RadioButton" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New RadioButton" />

                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New RadioButton" />
                </RadioGroup>


                <Button
                    android:id="@+id/nextQuestion"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout3"
                    android:background="@color/switch_thumb_normal_material_light"
                    android:layout_margin="8dp"
                    android:text="@string/nextQuestion"
                    android:layout_gravity="center"
                    android:textColor="@color/accent_material_light" />

                <Button
                    android:id="@+id/previous"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout3"
                    android:background="@color/switch_thumb_normal_material_light"
                    android:layout_margin="8dp"
                    android:layout_gravity="center"
                    android:text="@string/previousQuestion"
                    android:textColor="@color/accent_material_light" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
